force-app/main/default/objects/Product_Escalator__c/Product_Escalator__c.object-meta.xml
<CustomObject>
    <label>Product Escalator</label>
    <nameField>
        <displayFormat>PE-{00000}</displayFormat>
        <label>Product Escalator Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Escalators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>