force-app/main/default/objects/Product_Escalator__c/fields/New_NMC_Discount__c.field-meta.xml
<CustomField>
    <fullName>New_NMC_Discount__c</fullName>
    <inlineHelpText>When escalator is active, this field will override the NMC Discount field on the Product</inlineHelpText>
    <label>New NMC Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>