force-app/main/default/objects/Product_Escalator__c/fields/New_Solar_Electricity_Rate__c.field-meta.xml
<CustomField>
    <fullName>New_Solar_Electricity_Rate__c</fullName>
    <inlineHelpText>When escalator is active, this field will override the Solar Electricity Rate field on the Product</inlineHelpText>
    <label>New Solar Electricity Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>