force-app/main/default/objects/Product_Escalator__c/fields/Number_of_Credit_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Credit_Transfers__c</fullName>
    <inlineHelpText>The number credit transfer at which this rate will be enacted. Credit transfer is defined by the number of non-zero NMC transfers on the production updates for a SSS</inlineHelpText>
    <label>Number of Credit Transfers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>