force-app/main/default/objects/Product_Escalator__c/fields/Product_Escalation_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Product_Escalation_Schedule__c</fullName>
    <label>Product Escalation Schedule</label>
    <referenceTo>Product_Escalation_Schedule__c</referenceTo>
    <relationshipLabel>Product Escalators</relationshipLabel>
    <relationshipName>Product_Escalators</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>