force-app/main/default/objects/Product_Escalator__c/fields/Starting_Credit_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Starting_Credit_Transfer__c</fullName>
    <inlineHelpText>The number credit transfer at which this rate will be enacted. Credit transfer is defined by the number of non-zero NMC transfers on the production updates for a SSS</inlineHelpText>
    <label>Starting Credit Transfer</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>