force-app/main/default/objects/Product_Escalator__c/validationRules/Pick_One_Product_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Pick_One_Product_Type</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISNULL(
New_Solar_Electricity_Rate__c  
)),
NOT(ISNULL(
New_NMC_Discount__c
))
)</errorConditionFormula>
    <errorMessage>You can&apos;t populate both the Solar Electric Rate and the % Discount fields. This escalator should only be used for one product type</errorMessage>
</ValidationRule>